@@ -2,6 +2,9 @@ Revision history for Web::Microformats2
 
 {{$NEXT}}
 
+    - For the sake of faster load time, swapped out all use of Moose
+    (and MooseX) for Moo (and MooX).
+
 0.501 2019-06-06T16:26:33Z
 
     - Improved parsing of an edge case where the input document wants to
